main/default/objects/Account_Location__c/Account_Location__c.object-meta.xml
<CustomObject>
    <label>Account Location</label>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>Account Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>