main/default/objects/Account_Location__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>